Fixes for the sceleton of the command

--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,7 @@
     },
     "autoload": {
         "psr-4": {
-            "Timberhub\\Commands\\BranchDeployCommand\\": "src/"
+            "Timberhub\\": "src/"
         }
     }
 }
