--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,8 @@
         }
     ],
     "require": {
-        "symfony/console": "7.0.x-dev"
+        "symfony/console": "7.0.x-dev",
+        "laravel/forge-sdk": "3.13.5"
     },
     "autoload": {
         "psr-4": {
@@ -18,4 +19,3 @@
         }
     }
 }
-
