--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
         }
     ],
     "require": {
+        "php": ">=8.0",
         "symfony/console": "7.0.x-dev",
         "laravel/forge-sdk": "3.13.5"
     },
