--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,6 @@
 {
     "name": "timberhub/forge-deployments",
+    "description": "A simple CLI tool to deploy Laravel applications.",
     "type": "library",
     "license": "MIT",
     "minimum-stability": "dev",
@@ -11,8 +12,8 @@
     ],
     "require": {
         "php": ">=8.0",
-        "symfony/console": "7.0.x-dev",
-        "laravel/forge-sdk": "3.13.5"
+        "symfony/console": "^7.0.x-dev",
+        "laravel/forge-sdk": "^3.13.5"
     },
     "autoload": {
         "psr-4": {
