--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
     ],
     "require": {
         "php": ">=8.0",
-        "symfony/console": "^7.0.x-dev",
+        "symfony/console": "^6.0.9",
         "laravel/forge-sdk": "^3.13.5"
     },
     "autoload": {
