--- a/composer.json
+++ b/composer.json
@@ -1,28 +1,30 @@
 {
-    "name": "timberhub/laravel-deployments",
-    "description": "A simple CLI tool to deploy Laravel applications.",
-    "type": "library",
-    "license": "MIT",
-    "minimum-stability": "dev",
-    "support": {
-        "issues": "https://github.com/timberhubcom/laravel-deployments/issues",
-        "source": "https://github.com/timberhubcom/laravel-deployments"
-    },
-    "authors": [
-        {
-            "name": "dimpagk",
-            "email": "dimitris@timberhub.com"
-        }
-    ],
-    "require": {
-        "php": "^8.0.0",
-        "symfony/console": "^6.0.9",
-        "laravel/forge-sdk": "^3.13.5"
-    },
-    "autoload": {
-        "psr-4": {
-            "Timberhub\\": "src/"
-        }
-    },
-    "bin": ["bin/ci-actions"]
+  "name": "timberhub/laravel-deployments",
+  "description": "A simple CLI tool to deploy Laravel applications.",
+  "type": "library",
+  "license": "MIT",
+  "minimum-stability": "dev",
+  "support": {
+    "issues": "https://github.com/timberhubcom/laravel-deployments/issues",
+    "source": "https://github.com/timberhubcom/laravel-deployments"
+  },
+  "authors": [
+    {
+      "name": "dimpagk",
+      "email": "dimitris@timberhub.com"
+    }
+  ],
+  "require": {
+    "php": "^8.2.0",
+    "symfony/console": "^6.0.9",
+    "laravel/forge-sdk": "^3.13.5"
+  },
+  "autoload": {
+    "psr-4": {
+      "Timberhub\\": "src/"
+    }
+  },
+  "bin": [
+    "bin/ci-actions"
+  ]
 }
